# dell-tempest-plugin

./: README.rst  setup.cfg  setup.py
dell_tempest_plugin/: config.py  plugin.py
dell_tempest_plugin/tests/api/: base.py  test_hello_world.py
dell_tempest_plugin/tests/scenario/: test_volume_basic_ops.py
