[metadata]
name = dell-tempest-plugin
summary = Dell test suite
description-file =
    README.rst
author = Dell
author-email = david_paterson@dell.com
home-page = http://www.github.com/dell-esg/dell-tempest-plugin
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    
[entry_points]
tempest.test_plugins =
    dell-tempest-plugin = dell_tempest_plugin.plugin:DellTempestPlugin

[pbr]
warnerrors = True
